# cube

./: .gitignore  teste.txt
cube-server/: .gitignore  Cargo.toml  uploads.db
cube-server-front/: index.html  package.json  pnpm-lock.yaml
cube-server-front/electron/: main.js
cube-server-front/src/: App.tsx  gallery.tsx  index.css
cube-server-front/src/PhotoGrid/: PhotoItem.tsx  PhotoToolbar.tsx  index.tsx  types.ts
cube-server-front/src/hooks/: useWebSocket.ts
cube-server-front/src/qr/: qrCodePanel.tsx
cube-server/src/: main copy.rs  main.rs  state.rs  tcp_server.rs
cube-server/src/handlers/: auth.rs  config.rs  mod.rs  thumbs.rs  upload.rs  upload_raw.rs
cube-server/src/utils/: file.rs  hash.rs  mod.rs  path.rs
cube-server/src/ws/: mobile.rs  mod.rs  ws.rs
cube_client/: README.md  pubspec.yaml
cube_client/android/: build.gradle
cube_client/android/app/: build.gradle
cube_client/android/app/src/main/: AndroidManifest.xml
cube_client/android/app/src/main/kotlin/com/example/cube_client/: MainActivity.kt
cube_client/ios/Runner/: Info.plist
cube_client/ios/Runner.xcodeproj/: project.pbxproj
cube_client/lib/: main copy.dart  main.dart
cube_client/lib/pages/: login_page.dart  pairing_page.dart  qr_page.dart  splash_page.dart  upload_page.dart
cube_client/lib/services/: auth_service.dart  db_service.dart  photo_service.dart  send_thumbnails.dart  upload_service.dart  ws_service.dart
cube_client/linux/: CMakeLists.txt
cube_client/linux/runner/: my_application.cc
cube_client/macos/Flutter/: GeneratedPluginRegistrant.swift
cube_client/macos/Runner.xcodeproj/: project.pbxproj
cube_client/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
cube_client/macos/Runner/Configs/: AppInfo.xcconfig
cube_client/test/: widget_test.dart
cube_client/web/: index.html  manifest.json
cube_client/windows/: CMakeLists.txt
cube_client/windows/runner/: Runner.rc  main.cpp
frontend/: csproj.txt  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/src/: lib.rs  main.rs  state.rs  tcp_server.rs
frontend/src-tauri/src/handlers/: auth.rs  config.rs  mod.rs  thumbs.rs  upload_raw.rs
frontend/src-tauri/src/migrations/: create_tables.sql
frontend/src-tauri/src/utils/: file.rs  hash.rs  mod.rs  path.rs
frontend/src-tauri/src/ws/: mod.rs  ws.rs
frontend/src/PhotoGrid/: PhotoItem.tsx  index.tsx  useSelection.ts
frontend/src/components/: ConnectionStatus.tsx
frontend/src/hooks/: useWebSocket.ts
frontend/src/qr/: QrCard.tsx  qrCodePanel.tsx
