[package]
name = "cube"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["multipart", "macros", "ws"] }
base64 = "0.21"
bytes = "1.5"
chrono = {version = "0.4.41", features = ["serde"]}
ctrlc = "3.4"
dirs = "5.0"
futures-util = "0.3"
hyper = "1.1"
hyper-util = { version = "0.1", features = ["tokio"] }
local-ip-address = "0.5"
tokio = { version = "1.37", features = ["full"] }
tokio-tungstenite = "0.21"
tungstenite = "0.21"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
multipart = "0.18"
uuid = { version = "1", features = ["v4"] }
rand = "0.8"
rusqlite = { version = "0.30", features = ["bundled"] }
sha2 = "0.10"
whoami = "1"



