[package]
name = "frontend"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "frontend_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
axum = { version = "0.7", features = ["multipart", "macros", "ws"] }
base64 = "0.21"
bytes = "1.5"
chrono = {version = "0.4.41", features = ["serde"] }
ctrlc = "3.4"
dirs = "5.0"
futures-util = "0.3"
hyper = "1.1"
hyper-util = { version = "0.1", features = ["tokio"] }
libloading = "0.8"
local-ip-address = "0.5"
tokio = { version = "1.37", features = ["full"] }
tokio-tungstenite = "0.21"
tungstenite = "0.21"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs"] }
multipart = "0.18"
uuid = { version = "1", features = ["v4"] }
rand = "0.8"
sha2 = "0.10"
whoami = "1"
tauri-plugin-sql = { version = "2.0.0", features = ["sqlite"] }
tauri-plugin-dialog = "2"
